--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
 With kicad StepUp you’ll get an exact representation of your physical board in Native 3D PCB
-v7.1.4.8 September/2017
+v7.1.5.1 September/2017
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -249,4 +249,5 @@ Changelog
 - fixed Sketch position for default use BaseOrigin @ 0,0,0 
 - fixed App::Part list inverted after FC 12090 https://github.com/FreeCAD/FreeCAD/pull/916
 - fixed case of pcb with one drill only
+- minor fix when exporting wrl from multi objects 
 - most clean code and comments done
