--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
 With kicad StepUp you’ll get an exact representation of your physical board in Native 3D PCB
-v7.1.5.7 October/2017
+v7.1.5.8 November/2017
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -255,4 +255,5 @@ Changelog
 - fixed a regression in Sketch
 - fixed Arc orientation when creating Sketch from dxf,svg
 - improved FC0.16 compatibility
+- aligned GridOrigin also in case of Sketch copy/paste from empty board
 - most clean code and comments done
