fix for ellipses
to do: fix export sketches w ellipses in py3

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
 With kicad StepUp you’ll get an exact representation of your physical board in Native 3D PCB
-v7.1.6.3 November/2017
+v7.1.6.7 November/2017
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -262,4 +262,6 @@ Changelog
 - added oval exception if only one value is done
 - starting py3 compatibility
 - added offset in mm after kicad_pcb version 20171114
+- moved edgestofaces to internal function
+- fixed ellipses
 - most clean code and comments done
