--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
 With kicad StepUp you’ll get an exact representation of your physical board in Native 3D PCB
-v7.1.7.5 February 2018
+v7.1.7.7 February 2018
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -269,4 +269,6 @@ Changelog
 - started footprint exporter (smd [rect, oval, circle])
 - added Round Rectangles and Poly Lines (for RF design)
 - simple copy button added
+- improved TH, NPTH and SMD pads
+- bspline allowed on footprint F_Silks
 - most clean code and comments done
