added Sketch simplifier

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
 With kicad StepUp you’ll get an exact representation of your physical board in Native 3D PCB
-v7.1.7.9 March 2018
+v7.1.8.0 March 2018
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -278,4 +278,5 @@ Changelog
 - added single copy and PDN copy (object flattening)
 - added Zip open of STEP file(s)
 - added option to check updates
+- added Sketch simplifier
 - most clean code and comments done
