--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
 With kicad StepUp you’ll get an exact representation of your physical board in Native 3D PCB
-v7.1.8.7 April 2018
+v7.2.1.6 April 2018
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -282,4 +282,7 @@ Changelog
 - added loading pad poly in fp
 - fixed simplify sketch
 - improved Qt5 compatibility
+- added workaround for STEP exporting OCC 7.2.0
+- improved STEP exporting with hierarchy, onelevel, flat options
+- added QtGui.QApplication.processEvents() for Qt5
 - most clean code and comments done
