--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
 With kicad StepUp you’ll get an exact representation of your physical board in Native 3D PCB
-v7.3.2.8 May 2018
+v7.3.3.4 July 2018
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -291,4 +291,6 @@ Changelog
 - adding Geometry and Constraints as a single instruction to avoid long delay with sketches
 - added Constrinator
 - allowed ArcOfCircle for Polyline Pads
+- roundrect pads for import footprint supported
+- assigned combobox to defined colors
 - most clean code and comments done
