--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
 With kicad StepUp you’ll get an exact representation of your physical board in Native 3D PCB
-v8.1.0.3 August 2018
+v8.3.0.0 April 2019
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -298,5 +298,12 @@ Changelog
 - improved writing fp data 
 - push Moved 3D model(s) to kicad PCB
 - sync Reference in case of lost correct Label (import export STEP file with Links)
-- generate & compare 3D position report for MCAD collab
+- improved precision on board data using "{:.3f}".format for pushpcb & Pushfootprint and angles
+- re-introduced ability to use footprints with edge cuts inside
+- restored ability to load pcb edge from footprint instead of Sketch
+- added option (not used) to simplify compsolid to solid
+- added support for pcb reading gr_poly on Edge.Cuts
+- improved fp parsing for custom geo
+- improved fp parsing for custom geo again
+- first implementation of bspline edge import (TBD: spline w control points, push to pcb)
 - most clean code and comments done
