imported splines are now editable

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
 With kicad StepUp you’ll get an exact representation of your physical board in Native 3D PCB
-v8.3.0.1 April 2019
+v8.3.0.2 April 2019
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -307,4 +307,5 @@ Changelog
 - improved fp parsing for custom geo again
 - first implementation of bspline edge import (TBD: spline w control points, push to pcb)
 - pushpcb working with gr_curves, downgrading to arcs and lines (TBD: use spline)
+- spline w control points
 - most clean code and comments done
