--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
 With kicad StepUp you’ll get an exact representation of your physical board in Native 3D PCB
-v8.3.1.0 May 2019
+v8.3.2.0 May 2019
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -308,8 +308,9 @@ Changelog
 - first implementation of bspline edge import (TBD: spline w control points, push to pcb)
 - pushpcb working with gr_curves, downgrading to arcs and lines (TBD: use spline)
 - spline w control points
-- fixing pushpcb
+- fixing pushing pcb
 - adding support for double quotes on kicad_pcb and kicad_mod format
 - bsplines allowed for push&pull kicad_pcb
+- fixed hanging issue on AppImages (thread)
+- improved simplify sketch
 - most clean code and comments done
-
