--- a/changelog.txt
+++ b/changelog.txt
@@ -6,8 +6,8 @@ The accurate 3D visualization of components on board assemblies in kicad 3dviewe
 maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
-With kicad StepUp you’ll get an exact representation of your physical board in Native 3D PCB
-v8.3.2.0 May 2019
+With kicad StepUp you will get an exact representation of your physical board in Native 3D PCB
+v8.4.0.7 August 2019
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -318,4 +318,5 @@ Changelog
 - fixed wbs ordering
 - added edges2sketch function
 - local coordinate system reference added
+- improved search for 3d models on local path without using KIPRJMOD
 - most clean code and comments done
