--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ maintained in the same accuracy and aspect in STEP AP214 format. +
 The *kicad StepUp* maintains the usual way to work with kicad, but improves the process
 to work in a collaborative way with mechanical designers bringing near ECAD and MCAD environments. +
 With kicad StepUp you will get an exact representation of your physical board in Native 3D PCB
-v8.4.0.7 August 2019
+v9.0.1.1 August 2019
 
 please refer to
 kicadStepUp-starter-Guide.pdf
@@ -319,4 +319,5 @@ Changelog
 - added edges2sketch function
 - local coordinate system reference added
 - improved search for 3d models on local path without using KIPRJMOD
+- initial support for App::Link & App::LinkGroup
 - most clean code and comments done
